# SmartLiftRentals

./: .gitignore  README.md  docker-compose.dev.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/config/: database.py  mqtt.py  redis.py  security.py  settings.py
backend/app/models/: __init__.py  contract.py  cost.py  customer.py  lift.py  lift_type.py  user.py
backend/app/routes/: __init__.py  auth.py  contracts.py  costs.py  customers.py  lift_types.py  lifts.py  statistics.py  telemetry.py  users.py
backend/app/schemas/: contract.py  cost.py  customer.py  lift.py  lift_type.py  statistics.py  telemetry.py  user.py
backend/app/scripts/: reset_db.py
backend/app/services/: contract.py  cost.py  customer.py  lift.py  lift_type.py  seed.py  statistics.py  telemetry_sim.py  user.py
backend/tests/: test_health.py
broker/mosquitto/: Dockerfile.dev  mosquitto.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  contracts.ts  costs.ts  customers.ts  index.ts  liftTypes.ts  lifts.ts  statistics.ts  telemetry.ts  users.ts
frontend/src/assets/: main.css
frontend/src/components/: AppModal.vue  DenmarkMap.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  lifts.ts
frontend/src/types/: contract.ts  cost.ts  customer.ts  (+5 more)
infra/modules/: postgres.bicep  webapp.bicep
infra/prod/: main.bicep
(+14 files in other folders)
